--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "axios": "^1.7.5",
+    "bcrypt": "^5.1.1",
     "firebase": "^10.13.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.7",
     "next-auth": "^4.24.7",
     "react": "^18",
@@ -18,6 +20,8 @@
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
