--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.7.5",
     "bcrypt": "^5.1.1",
     "firebase": "^10.13.0",
@@ -21,6 +22,7 @@
     "sharp": "^0.33.5"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
