--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.7",
     "next-auth": "^4.24.7",
+    "quill": "^2.0.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-quill": "^2.0.0",
     "sharp": "^0.33.5"
   },
   "devDependencies": {
