--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "aos": "^3.0.0-beta.6",
     "axios": "^1.7.5",
     "bcrypt": "^5.1.1",
+    "dompurify": "^3.1.6",
     "firebase": "^10.13.0",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.7",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@types/aos": "^3.0.7",
     "@types/bcrypt": "^5.0.2",
+    "@types/dompurify": "^3.0.5",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
